--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "peerserve",
   "version": "0.0.0",
-  "description": "Really quick PeerServer and portfinder",
+  "description": "Really quick PeerServer command line with portfinder",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
